--- a/src/components/pages/James/James.module.css
+++ b/src/components/pages/James/James.module.css
@@ -96,7 +96,8 @@
 }
 
 .contact__wrapper {
-  margin: 2rem auto 3rem;
+  width: 4rem;
+  margin: 2rem auto;
 }
 
 @media (min-width: 768px) {
